---
source: src/test.rs
expression: evaluate_example(path)
input_file: tests/string_operation.nu
---
==== COMPILER ====
0: String (0 to 5) ""abc""
1: Plus (6 to 7)
2: String (8 to 13) ""def""
3: BinaryOp { lhs: NodeId(0), op: NodeId(1), rhs: NodeId(2) } (0 to 13)
4: Block(BlockId(0)) (0 to 13) - sub_nodes: 3
==== SCOPE ====
0: Frame Scope, node_id: NodeId(4) (empty)
==== TYPES ====
0: string
1: forbidden
2: string
3: string
4: string
==== IR ====
register_count: 0
file_count: 0
==== IR ERRORS ====
Error (NodeId 0): node String not suported yet

